<resources>
    <string name="app_name">Casino Royale</string>
    <string name="Login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="new_player_score">New Player Score</string>
    <string name="new_player_name">New Player Name</string>
    <string name="create_player">Create Player</string>
    <string name="party_image">Party Image</string>
    <string name="player_creation">Player Creation</string>
    <string name="dealer_login">Dealer Login</string>
    <string name="poorNotice">Not enough money</string>
    <string name="starting_bet">1</string>
    <string name="jackpot_starting">0</string>
</resources>